模型加载器

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ find_package(glad CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
+find_package(assimp CONFIG REQUIRED)
+target_link_libraries(learn-opengl-record PRIVATE assimp::assimp)
 target_link_libraries(learn-opengl-record PRIVATE imgui::imgui)
 target_link_libraries(learn-opengl-record PRIVATE glm::glm)
 target_link_libraries(learn-opengl-record PRIVATE glfw)
