--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(assimp CONFIG REQUIRED)
+find_package(unofficial-nativefiledialog CONFIG REQUIRED)
+target_link_libraries(learn-opengl-record PRIVATE unofficial::nativefiledialog::nfd)
 target_link_libraries(learn-opengl-record PRIVATE assimp::assimp)
 target_link_libraries(learn-opengl-record PRIVATE imgui::imgui)
 target_link_libraries(learn-opengl-record PRIVATE glm::glm)
